--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -11,4 +11,4 @@
     <button type="submit">Login</button>
   </div>
 </form>
-<a routerLink="/sing-up">Реєстрація</a>
+<a routerLink="/sign-up">Реєстрація</a>
