--- a/src/app/views/sign-up/sign-up.component.html
+++ b/src/app/views/sign-up/sign-up.component.html
@@ -1,4 +1,4 @@
-<form class="form" [formGroup]="singUpForm" (ngSubmit)=onSubmit()>
+<form class="form" [formGroup]="signUpForm" (ngSubmit)=onSubmit()>
   <label for="email"> Твій Email: </label>
   <input class="form__input" id="email" type="email" formControlName="email" required >
   <p class="form__input_error" *ngIf="email.invalid && email.touched">Не корректно введений email</p>
@@ -11,6 +11,6 @@
   <input class="form__input" id confirmPassword type="password" formControlName="confirmPassword" required>
   <p class="form__input_error" *ngIf="confirmPassword.invalid && confirmPassword.touched">Пароль не співпадає</p>
 
-  <button class="button" type="submit" [disabled]="!singUpForm.valid">Зберегти</button>
+  <button class="button" type="submit" [disabled]="!signUpForm.valid">Зберегти</button>
 </form>
 
