--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<a routerLink="/login">Login</a>
-<br>
-<a routerLink="/profile">профіль</a>
+<a *ngIf="!isLogin" routerLink="/login">Login</a>
+<button *ngIf="isLogin" (click)="logout()">logout</button>
 <router-outlet></router-outlet>
 
