--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<a *ngIf="!isLogin" routerLink="/login">Login</a>
-<button *ngIf="isLogin" (click)="logout()">logout</button>
+<a *ngIf="!isLogin()" routerLink="/login">Login</a>
+<button *ngIf="isLogin()" (click)="logout()">logout</button>
 <router-outlet></router-outlet>
 
