--- a/src/app/views/profile/profile.component.html
+++ b/src/app/views/profile/profile.component.html
@@ -2,7 +2,7 @@
 <form class="form" (ngSubmit)="onSubmit()" #profileForm="ngForm">
   <label class="form__input">
     Ім'я:
-    <input type="text" [(ngModel)]=profile.fullname name="fullname" #fullname="ngModel" required>
+    <input type="text" [(ngModel)]="profile.fullname" name="fullname" #fullname="ngModel" required>
   </label>
   <label class="form__input">
     Адреса роботи:
