--- a/src/app/views/add-trip/add-trip.component.html
+++ b/src/app/views/add-trip/add-trip.component.html
@@ -1,4 +1,29 @@
-
 <div style="width: 100%; height: 400px;">
-    <app-map [route]="tripRoute"></app-map>
+    <app-map [route]="trip.route"></app-map>
 </div>
+<form #addTripForm="ngForm" (ngSubmit)="addTrip()">
+    <div class="form-group">
+        <label for="car">Выберите машину</label>
+        <select name="car" id="car" [(ngModel)]="trip.car" required>
+            <option *ngFor="let car of cars" [ngValue]="car">
+                {{car.model}}({{car.license}})
+            </option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="seatsTotal">Количество мест</label>
+        <input type="text" id="seatsTotal" [(ngModel)]="trip.seatsTotal" name="seatsTotal">
+    </div>
+    <div class="form-group">
+        <label for="date">Выберите время отбытия</label>
+        <select name="date" id="date" required [(ngModel)]="trip.departureTime">
+            <option *ngFor="let date of dates" [ngValue]="date" >
+                {{date.getHours()}}:00
+            </option>
+        </select>
+    </div>
+    <div class="form-group">
+        <button type="submit" [disabled]="!addTripForm.form.valid">Создать поездку</button>
+    </div>
+</form>
+  
