--- a/src/app/views/trips/trips.component.html
+++ b/src/app/views/trips/trips.component.html
@@ -1,9 +1,10 @@
 <div class="card" *ngFor="let trip of trips">
     <div class="map">
-        <app-map [route]="trip.route" [markers]="trip.markers" [home]="user ? [user.homeLatitude, user.homeLongitude] : null"></app-map>
+        <app-map [route]="trip.route" [markers]="trip.waypoints || []" [home]="user.homeLocation"></app-map>
     </div>
-    <span>Car: {{trip.car.model}}({{trip.car.license}})</span>
+    <!-- <span>Car: {{trip.car.model}}({{trip.car.license}})</span> -->
     <br/>
     <span>Seats: {{trip.seatsLeft}} of {{trip.seatsTotal}}</span>
+    <button (click)="subscribeToTrip(trip)">Subscribe</button>
 </div>
 <button (click)="addTrip()">Add trip</button>
