--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,4 +2,51 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  --text-color: #393939;
+  --border-color: #D5D5D5;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: var(--text-color);
+}
+
+.button {
+  appearance: none;
+  background: none;
+  border: none;
+  outline: none;
+  font-size: 1rem;
+  padding: .5rem 1rem;
+  border-radius: .25rem;
+  cursor: pointer;
+}
+
+.button--grey {
+  color: var(--text-color);
+  border: 1px solid var(--border-color);
+}
+
+.button--white {
+  color: #FFF;
+  border: 1px solid #FFF;
+}
+
+.icon {
+  width: 1rem;
+  height: 1rem;
+}
+
+.icon--white {
+  fill: #FFF;
+}
+
+.card {
+  border: 1px solid var(--border-color);
+  box-shadow: 0 0 8px 2px rgba(0, 0, 0, .05);
+}
+
+.card__content {
+  padding: 1rem;
 }
