--- a/src/app/views/trips/trips.component.scss
+++ b/src/app/views/trips/trips.component.scss
@@ -21,8 +21,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    filter: saturate(.1) brightness(1.05) contrast(1.05);
-    border-bottom: 1px solid var(--border-color);
+    border-bottom: 1px solid #D9DDDF;
 }
 
 .trip__subscribe {
