--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,9 @@
 :host {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    width: 100%;
+    min-height: 100vh;
+    background-image: linear-gradient(to top,#5ee7df,#66a6ff);
 }
 
 .main-header {
@@ -9,7 +11,8 @@
     align-items: center;
     justify-content: space-between;
     color: #FFF;
-    background-color: #111;
+    background-color: #FFF;
+    box-shadow: 0 0 2rem rgba(0, 0, 255, .1);
     padding: .5rem 1rem;
 }
 
@@ -20,8 +23,33 @@
 .main-header__menu-icon {
     width: 1.25rem;
     height: 1.25rem;
+    fill: #594e78;
+}
+
+.sidebar__overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(255, 255, 255, .375);
+}
+
+.sidebar__content {
+    width: 300px;
+    background-color: #FFF;
+    box-shadow: 0 0 8px 4px rgba(0, 0, 0, .05);
+    border-right: 1px solid var(--border-color);
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .views {
-    flex: 2;
+    display: flex;
+    flex-grow: 2;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
 }
