--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 }
 
 html {
+  --main-color: #161616;
   --text-color: #393939;
   --border-color: #D5D5D5;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -43,8 +44,10 @@ html {
 }
 
 .card {
-  border: 1px solid var(--border-color);
-  box-shadow: 0 0 8px 2px rgba(0, 0, 0, .05);
+  background-color: #FFF;
+  border-radius: .75rem;
+  overflow: hidden;
+  box-shadow: 0 0 1.25rem rgba(0,0,0,.1);
 }
 
 .card__content {
