Date added to header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,9 @@
             <use xlink:href="./assets/icons.svg#menu"></use>
         </svg>
     </button>
+    <span class="main-header__date">
+        {{today}}
+    </span>
     <button
         class="button button--grey"
         routerLink="/trips/add"
