--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -11,7 +11,7 @@
     align-items: center;
     justify-content: space-between;
     background-color: #FFF;
-    box-shadow: 0 0 2rem rgba(0, 0, 255, .1);
+    box-shadow: 0 0 2rem var(--highlight-color);
     padding: .5rem 1rem;
 }
 
@@ -32,13 +32,17 @@
     fill: #594e78;
 }
 
+.sidebar {
+    z-index: 1000; // Needed because of Leaflet
+}
+
 .sidebar__overlay {
     position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
     right: 0;
-    background-color: rgba(255, 255, 255, .375);
+    background-color: var(--overlay-color);
 }
 
 .sidebar__content {
