--- a/src/app/views/trips/trips.component.scss
+++ b/src/app/views/trips/trips.component.scss
@@ -6,12 +6,14 @@
 }
 
 .trip {
-    width: 320px;
+    min-width: 320px;
+    border-radius: 2rem;
 }
+
 
 .trip__header {
     width: 100%;
-    padding-bottom: 70%;
+    padding-bottom: 80%;
     position: relative;
 }
 
@@ -21,10 +23,31 @@
     bottom: 0;
     left: 0;
     right: 0;
-    border-bottom: 1px solid #D9DDDF;
+    border-bottom: 1px solid var(--border-color);
+}
+
+.trip__content {
+    padding: 1.875rem;
+}
+
+.trip__description {
+    text-transform: uppercase;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.trip__description + .trip__description {
+    border-top: 1px solid var(--border-color);
+    margin-top: .875rem;
+    padding-top: .875rem;
+}
+
+.trip__description-label {
+    color: var(--text-secondary-color);
 }
 
 .trip__subscribe {
-    margin-top: 1rem;
+    margin-top: 2rem;
     width: 100%;
 }
