--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,32 +6,45 @@
 }
 
 html {
-  --main-color: #161616;
-  --text-color: #393939;
-  --border-color: #D5D5D5;
+  --primary-default-color: #003EFF;
+  --primary-accent-color: #00FF9B;
+  --secondary-color: #432C85;
+  --disabled-color: #D3D3D3;
+  --danger-color: #DC143C;
+  --text-primary-color: #182F19;
+  --text-secondary-color: #8087AE;
+  --link-color: #FF3A82;
+  --border-color: #F6F6F6;
+  --highlight-color: rgba(0, 0, 255, .1);
+  --overlay-color: rgba(12, 16, 102, .3);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  color: var(--text-color);
+  color: var(--text-primary-color);
 }
 
 .button {
+  text-transform: uppercase;
   appearance: none;
   background: none;
   border: none;
+  color: #FFF;
   outline: none;
   font-size: 1rem;
-  padding: .5rem 1rem;
-  border-radius: .25rem;
+  padding: 1rem 2rem;
+  border-radius: 3rem;
+  font-weight: 700;
   cursor: pointer;
 }
 
-.button--grey {
-  color: var(--text-color);
-  border: 1px solid var(--border-color);
+.button--accent {
+  background-color: var(--primary-accent-color);
 }
 
-.button--white {
-  color: #FFF;
-  border: 1px solid #FFF;
+.button--secondary {
+  background-color: var(--secondary-color);
+}
+
+.button--disabled {
+  background-color: var(--disabled-color);
 }
 
 .icon {
@@ -45,11 +58,11 @@ html {
 
 .card {
   background-color: #FFF;
-  border-radius: .75rem;
+  border-radius: 1rem;
   overflow: hidden;
-  box-shadow: 0 0 1.25rem rgba(0,0,0,.1);
+  box-shadow: 0 0 1.25rem var(--highlight-color);
 }
 
 .card__content {
-  padding: 1rem;
+  padding: 2rem;
 }
