--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,26 @@
 
 <header *ngIf="isLoggedIn" class="main-header">
-    <button
-        class="button main-header__menu-button"
-        (click)="toggleSidebar()"
-    >
-        <svg class="main-header__menu-icon icon icon--white">
-            <use xlink:href="./assets/icons.svg#menu"></use>
-        </svg>
-    </button>
+    <div class="main-header__left">
+        <button
+            class="button main-header__menu-button"
+            (click)="toggleSidebar()"
+        >
+            <svg class="main-header__menu-icon icon icon--white">
+                <use xlink:href="./assets/icons.svg#menu"></use>
+            </svg>
+        </button>
+    </div>
     <span class="main-header__date">
         {{today}}
     </span>
-    <button
-        class="button button--grey"
-        routerLink="/trips/add"
-    >
-        Create trip
-    </button>
+    <div class="main-header__right">
+        <button
+            class="button button--accent main-header__trip-button"
+            routerLink="/trips/add"
+        >
+            Create trip
+        </button>
+    </div>
 </header>
 <main class="views">
     <div *ngIf="isSidebarOpen" class="sidebar">
