--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,7 +12,15 @@
     justify-content: space-between;
     background-color: #FFF;
     box-shadow: 0 0 2rem var(--highlight-color);
-    padding: .5rem 1rem;
+    padding: .875rem 1rem;
+}
+
+.main-header__left, .main-header__right {
+    width: 20%;
+}
+
+.main-header__right {
+     text-align: right;
 }
 
 .main-header__date {
@@ -30,6 +38,10 @@
     width: 1.25rem;
     height: 1.25rem;
     fill: #594e78;
+}
+
+.main-header__trip-button {
+    padding: .625rem 1.5rem;
 }
 
 .sidebar {
