Login form styles added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
     <span class="main-header__date">
         {{today}}
     </span>
-    <div class="main-header__right">
+    <div class="main-header__right h-hide--mobile">
         <button
             class="button button--accent main-header__trip-button"
             routerLink="/trips/add"
