--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,7 @@ html {
   --border-color: #F6F6F6;
   --highlight-color: rgba(0, 0, 255, .1);
   --input-shadow-color: rgba(0, 0, 255, .3);
+  --input-invalid-shadow-color: rgba(255, 0, 128, .3);
   --overlay-color: rgba(12, 16, 102, .3);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: var(--text-primary-color);
@@ -103,6 +104,14 @@ html {
 .form__input:focus {
   border: 1px solid var(--input-shadow-color);
   padding: calc(1.125rem - 1px) calc(1.5rem - 1px);
+}
+
+.form__input--invalid {
+  box-shadow: 0 0 2rem var(--input-invalid-shadow-color);
+}
+
+.form__error {
+  
 }
 
 .form__button {
