Departure time added to trip card

--- a/src/app/views/trips/trips.component.html
+++ b/src/app/views/trips/trips.component.html
@@ -32,7 +32,7 @@
                 Departure:
             </span>
             <span class="trip__description-value">
-                {{trip.departureTime.toLocaleTimeString()}}
+                {{getTime(trip.departureTime)}}
             </span>
         </div>
         <button
