--- a/src/app/views/trips/trips.component.scss
+++ b/src/app/views/trips/trips.component.scss
@@ -1,8 +1,8 @@
 .trips {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    height: 100%;
 }
 
 .trip {
