Profile form basic styling added; Places-suggest component now supports nested inputs

--- a/src/app/components/places-suggest/places-suggest.component.html
+++ b/src/app/components/places-suggest/places-suggest.component.html
@@ -1,5 +1,5 @@
 <div>
-  <input type="text" [formControl]="searchQuery" required>
+  <ng-content></ng-content>
   <ul [hidden]="address">
     <li class="item" *ngFor = "let place of suggestedPlaces" (click)=setPlace(place)>{{place.title}}</li>
   </ul>
