--- a/src/styles.scss
+++ b/src/styles.scss
@@ -112,7 +112,7 @@ html {
 }
 
 .form__field--icon .form__input {
-  padding-right: 2.75rem;
+  padding-right: 2.5rem;
 }
 
 .form__field--icon::after {
@@ -125,13 +125,21 @@ html {
   height: 1rem;
   transform: translateY(-50%);
   pointer-events: none;
+  mask-repeat: no-repeat;
+  mask-size: contain;
+  mask-position: 50% 50%;
 }
 
 .form__field--icon-arrow-down::after {
   mask-image: url("/assets/icons.svg#arrow-down");
-  mask-repeat: no-repeat;
-  mask-size: contain;
-  mask-position: 50% 50%;
+}
+
+.form__field--icon-house::after {
+  mask-image: url("/assets/icons.svg#house");
+}
+
+.form__field--icon-work::after {
+  mask-image: url("/assets/icons.svg#work");
 }
 
 .form__field--icon-color-accent::after {
