Sidebar navigation added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,8 +29,45 @@
             (click)="toggleSidebar()"
         ></div>
         <div class="sidebar__content">
-            <a *ngIf="!isLoggedIn" routerLink="/login">Login</a>
-            <button *ngIf="isLoggedIn" (click)="logout()">logout</button>
+            <nav class="main-nav">
+                <ul class="main-nav__content">
+                    <li class="main-nav__item">
+                        <a
+                            class="main-nav__link"
+                            routerLink="/profile"
+                            routerLinkActive="main-nav__link--active"
+                        >
+                            Profile
+                        </a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a
+                            class="main-nav__link"
+                            routerLink="/cars"
+                            routerLinkActive="main-nav__link--active"
+                        >
+                            Cars
+                        </a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a
+                            class="main-nav__link"
+                            routerLink="/trips"
+                            routerLinkActive="main-nav__link--active"
+                        >
+                            Trips
+                        </a>
+                    </li>
+                    <li class="main-nav__item">
+                        <a
+                            class="main-nav__link"
+                            (click)="logout()"
+                        >
+                            Logout
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
     <router-outlet></router-outlet>
