--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,53 +23,7 @@
     </div>
 </header>
 <main class="views">
-    <div *ngIf="isSidebarOpen" class="sidebar">
-        <div
-            class="sidebar__overlay"
-            (click)="toggleSidebar()"
-        ></div>
-        <div class="sidebar__content">
-            <nav class="main-nav">
-                <ul class="main-nav__content">
-                    <li class="main-nav__item">
-                        <a
-                            class="main-nav__link"
-                            routerLink="/profile"
-                            routerLinkActive="main-nav__link--active"
-                        >
-                            Profile
-                        </a>
-                    </li>
-                    <li class="main-nav__item">
-                        <a
-                            class="main-nav__link"
-                            routerLink="/cars"
-                            routerLinkActive="main-nav__link--active"
-                        >
-                            Cars
-                        </a>
-                    </li>
-                    <li class="main-nav__item">
-                        <a
-                            class="main-nav__link"
-                            routerLink="/trips"
-                            routerLinkActive="main-nav__link--active"
-                        >
-                            Trips
-                        </a>
-                    </li>
-                    <li class="main-nav__item">
-                        <a
-                            class="main-nav__link"
-                            (click)="logout()"
-                        >
-                            Logout
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-    </div>
+    <app-sidebar class="sidebar"></app-sidebar>
     <router-outlet></router-outlet>
     <app-loader></app-loader>
 </main>
