--- a/src/styles.scss
+++ b/src/styles.scss
@@ -46,6 +46,10 @@ html {
   background-color: var(--secondary-color);
 }
 
+.button--danger {
+  background-color: var(--danger-color);
+}
+
 .button--disabled {
   background-color: var(--disabled-color);
 }
