Map component draws passengers now

--- a/src/app/views/trips/trips.component.html
+++ b/src/app/views/trips/trips.component.html
@@ -2,7 +2,7 @@
     <ng-container *ngIf="!activeTrip">
         <div class="card trip" *ngFor="let trip of trips">
             <div class="trip__header">
-                <app-map class="trip__map" [route]="trip.route" [markers]="trip.waypoints || []" [home]="user.homeLocation"></app-map>
+                <app-map class="trip__map" [trip]="trip" [home]="user.homeLocation"></app-map>
             </div>
             <div class="card__content trip__content">
                 <div class="trip__description">
@@ -91,7 +91,7 @@
                     {{isTripOwner(activeTrip) ? 'Cancel trip' : 'Unsubscribe'}}
                 </button>
             </div>
-            <app-map class="trip__map" [route]="activeTrip.route"></app-map>
+            <app-map class="trip__map" [trip]="activeTrip"></app-map>
         </div>
     </ng-container>
 </div>
