--- a/src/app/views/add-trip/add-trip.component.html
+++ b/src/app/views/add-trip/add-trip.component.html
@@ -57,5 +57,5 @@
             </div>
         </form>
     </div>
-    <app-map class="trip__map" [route]="trip.route"></app-map>
+    <app-map class="trip__map" [trip]="trip"></app-map>
 </div>
