Small active trip UI changes

--- a/src/app/views/trips/trips.component.html
+++ b/src/app/views/trips/trips.component.html
@@ -78,6 +78,14 @@
                 </div>
                 <div class="trip__description">
                     <span class="trip__description-label">
+                        Free seats:
+                    </span>
+                    <span class="trip__description-value">
+                        {{activeTrip.seatsLeft}}
+                    </span>
+                </div>
+                <div class="trip__description">
+                    <span class="trip__description-label">
                         Departure:
                     </span>
                     <span class="trip__description-value">
